# full-stack

backend/ai-expense-backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/ai-expense-backend/app/: __init__.py  __main__.py  main.py
backend/ai-expense-backend/app/api/routes/: health.py
backend/ai-expense-backend/app/core/: config.py
backend/ai-expense-backend/app/db/: session.py
backend/ai-expense-backend/docs/: 01-后端骨架文件说明-前端视角版.md
backend/ai-expense-backend/tests/: test_health.py
backend/java-learning-project/docs/: 00-环境配置指南.md  01-Java基础语法.md  02-面向对象编程.md
backend/java-learning-project/examples/oop/: InheritanceExample.java  InterfaceExample.java  Person.java
frontend/ai-expense-frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/ai-expense-frontend/src/: main.ts  style.css  vite-env.d.ts
frontend/ai-expense-frontend/src/api/: client.ts  health.ts
frontend/ai-expense-frontend/src/layouts/: AppLayout.vue
frontend/ai-expense-frontend/src/router/: index.ts
frontend/ai-expense-frontend/src/stores/: app.ts
frontend/ai-expense-frontend/src/types/: api.ts
frontend/ai-expense-frontend/src/views/: DashboardView.vue  DocumentsView.vue  KnowledgeView.vue  NotFoundView.vue  ReportsView.vue
openspec/changes/enterprise-ai-expense-system/: design.md  proposal.md  tasks.md
openspec/changes/enterprise-ai-expense-system/specs/expense-agent-orchestration/: spec.md
openspec/changes/java-backend-learning-project/: design.md  proposal.md  tasks.md
(+13 files in other folders)
